--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-node-resolve": "^6.0.0",
     "babel-jest": "^26.0.1",
     "cypress": "^4.5.0",
+    "eslint": "^7.1.0",
     "rollup": "^1.20.0",
     "rollup-plugin-svelte": "^5.0.0",
     "svelte": "^3.0.0"
